--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -26,3 +26,6 @@
   <!-- include Normalize for regular text pages -->
   <link rel="stylesheet"  href="/css/normalize.min.css">
 {% endif %}
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;700&family=League+Gothic&display=swap" rel="stylesheet">
