--- a/src/_includes/css/custom.css
+++ b/src/_includes/css/custom.css
@@ -8,9 +8,13 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+body {
+  @apply font-figtree;
+}
+
 /* scrollbar styles */
 
-@media(min-width: 576px) {
+/* @media(min-width: 576px) {
     body::-webkit-scrollbar-track
     {
         box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -28,7 +32,7 @@ html {
     {
         background-color: #7c3aed;
     }
-}
+} */
 
 .hamburger {
   cursor: pointer;
@@ -136,3 +140,4 @@ html {
 .tippy-tooltip[x-placement^='bottom'] .tippy-arrow {
     border-bottom-color: #ccc;
 }
+
