--- a/src/_includes/section.header.njk
+++ b/src/_includes/section.header.njk
@@ -1,32 +1,22 @@
-<div class="flex flex-col justify-center h-full py-12">
-  <div class="self-center items-center flex flex-col sm:flex-row w-full md:w-5/6 xl:w-2/3 px-4 sm:px-0">
-    <div class="w-full text-center sm:text-left sm:w-1/2 py-12 sm:px-8">
-      <h1 class="tracking-wide text-purple-600 text-2xl mb-6">
-        New Thing: <span class="text-gray-800 font-bold tracking tracking-widest">AWE.SOME</span>
+<div class="w-full h-[270px] px-5 relative">
+  <div class="flex items-center justify-between max-w-[1000px] m-auto h-full">
+    <div class="w-1/2">
+      <h1 class="text-2xl text-body font-normal font-gothic text-[200px] m-0 leading-none z-10 relative">
+        ADVERGE
       </h1>
-      <h2 class="font-bold tracking-widest text-4xl">
-        Intro goes here...
-      </h2>
-      <span class="content__container block font-light text-browngray text-2xl my-6">
-        <ul class="content__container__list">
-          <li class="content__container__list__item xl:pl-3">Cool Feature</li>
-          <li class="content__container__list__item xl:pl-3">Another Feature</li>
-          <li class="content__container__list__item xl:pl-3">Something Else</li>
-          <li class="content__container__list__item xl:pl-3">Why Not</li>
-          <li class="content__container__list__item xl:pl-3">Rotating</li>
-          <li class="content__container__list__item xl:pl-3">List</li>
-          <li class="content__container__list__item xl:pl-3">Items Here</li>
-        </ul>
-      </span>
-      <p class="font-bold tracking-widest text-4xl">...think about it!</p>
     </div>
-    <div class="w-full sm:w-1/2">
-      <img src="/img/undraw_Friends_online_re_r7pq.svg" alt="AWE.SOME header">
+    <div class="w-1/2">
+      <p class="text-xl font-figtree pl-12">Digital ad sales experts empowering global ad tech firm's to expand into the Canadian market - unlocking growth
+        opportunities</p>
     </div>
   </div>
-</div>
-<div class="flex flex-row w-full justify-center pb-12">
-  <a class="px-10 py-2 text-gray-200 bg-purple-600 rounded-full shadow-md text-lg hover:bg-gray-800 hover:border-red" href="#about">
-    More Information
-  </a>
+  <div class="absolute top-[-150px] rotate-[130deg] z-0 opacity-20">
+    {% include 'ellipse-1.njk' %}
+  </div>
+  <div class="absolute top-[-150px] rotate-[130deg] z-0 right-[-100px] opacity-30">
+    {% include 'ellipse-2.njk' %}
+  </div>
+  <div class="absolute top-[-150px] rotate-[130deg] z-0 opacity-60">
+    {% include 'ellipse-3.njk' %}
+  </div>
 </div>
