--- a/src/index.njk
+++ b/src/index.njk
@@ -2,12 +2,10 @@
 layout: base.njk
 isFront: true
 ---
-<header class="header w-full min-h-screen flex flex-col justify-between">
-  {% include "navbar.njk" %}
+<header class="header w-full">
   {% include "section.header.njk" %}
 </header>
 <main>
   {% include "section.about.njk" %}
   {% include "section.features.njk" %}
-  {% include "section.register.njk" %}
 </main>
