Added ajax form sub,ission

--- a/src/_includes/section.features.njk
+++ b/src/_includes/section.features.njk
@@ -26,8 +26,15 @@
             transformative journey, where every move is strategic, and every success is amplified.
           </p>
         </div>
-        <div class="w-full mt-10">
-          <img class="rounded-full grayscale w-[300px]" width="" height="" src="/img/jeff.webp" alt="Jeff McCann"></div>
+        <div class="w-full mt-10 flex items-center justify-center">
+          <img class="rounded-full grayscale w-[300px]" width="" height="" src="/img/jeff.webp" alt="Jeff McCann">
+          <div class="w-[300px] pl-5">
+            <div class="rotate-6">
+              <img class="" width="" height="" src="/img/signature.webp" alt="Jeff's signature">
+            </div>
+            <p class="text-white font-figtree uppercase tracking-[2px] -mt-5">Jeff McCann</p>
+          </div>
+        </div>
         </div>
       </section>
     {% endif %}
