--- a/src/_includes/js.njk
+++ b/src/_includes/js.njk
@@ -1,40 +1,16 @@
-<script src="https://unpkg.com/popper.js@1"></script>
-<script src="https://unpkg.com/tippy.js@4"></script>
+
 <script>
-  function navToggle() {
-    let btn = document.getElementById('menuBtn');
-    let nav = document.getElementById('menu');
-
-    btn.classList.toggle('open');
-    nav.classList.toggle('flex');
-    nav.classList.toggle('hidden');
-  }
-
-  window.addEventListener('scroll', function () {
-    let btt = document.getElementById('btt');
-
-    if (window.scrollY >= 1080) {
-      btt.classList.remove('hidden');
-      btt.classList.add('block');
-    } else {
-      btt.classList.add('hidden');
-      btt.classList.remove('block');
-    }
-  });
-
-  console.log('Code/Design: ttntm.me'); // credit where credit is due
-
-  const template = document.getElementById('followTip');
-  const container = document.createElement('div');
-
-  container.appendChild(document.importNode(template.content, true));
-
-  tippy('#follow', {
-    content: container.innerHTML,
-    animation: 'scale',
-    duration: 250,
-    arrow: true,
-    placement: 'bottom',
-    interactive: true,
-  });
+  const handleSubmit = (event) => {
+    event.preventDefault();
+    const myForm = event.target;
+    const formData = new FormData(myForm);
+    fetch("/", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/x-www-form-urlencoded"
+      },
+      body: new URLSearchParams(formData).toString()
+    }).then(() => alert("Thank you for your submission")).catch((error) => alert(error));
+  };
+  document.querySelector("form").addEventListener("submit", handleSubmit);
 </script>
