Updated form shit

--- a/src/_includes/js.njk
+++ b/src/_includes/js.njk
@@ -1,6 +1,6 @@
 
 <script>
-  const handleSubmit = (event) => {
+  {# const handleSubmit = (event) => {
     event.preventDefault();
     const myForm = event.target;
     const formData = new FormData(myForm);
@@ -12,5 +12,24 @@
       body: new URLSearchParams(formData).toString()
     }).then(() => alert("Thank you for your submission")).catch((error) => alert(error));
   };
-  document.querySelector("form").addEventListener("submit", handleSubmit);
+  document.querySelector("form").addEventListener("submit", handleSubmit); #}
+
+  const handleSubmit = (event) => {
+  event.preventDefault();
+
+  const myForm = event.target;
+  const formData = new FormData(myForm);
+  
+  fetch("/", {
+    method: "POST",
+    headers: { "Content-Type": "application/x-www-form-urlencoded" },
+    body: new URLSearchParams(formData).toString(),
+  })
+    .then(() => console.log("Form successfully submitted"))
+    .catch((error) => alert(error));
+};
+
+document
+  .querySelector("form")
+  .addEventListener("submit", handleSubmit);
 </script>
