--- a/src/_includes/js.njk
+++ b/src/_includes/js.njk
@@ -19,13 +19,19 @@
 
   const myForm = event.target;
   const formData = new FormData(myForm);
+  const contactForm = document.querySelector('.contact-form');
+  const successMsg = document.querySelector('.success-msg');
   
   fetch("/", {
     method: "POST",
     headers: { "Content-Type": "application/x-www-form-urlencoded" },
     body: new URLSearchParams(formData).toString(),
   })
-    .then(() => console.log("Form successfully submitted"))
+    .then(() => {
+      console.log('fomr submitted successfully');
+      contactForm.classList.add('hidden');
+      successMsg.classList.remove('hidden');
+    })
     .catch((error) => alert(error));
 };
 
