--- a/src/_includes/section.features.njk
+++ b/src/_includes/section.features.njk
@@ -1,7 +1,7 @@
 {% for item in collections.sections %}
   {% if item.data.type === 'features' %}
-    <section id="features" class="w-full flex flex-col justify-center  bg-[#111111] py-32">
-      <div class="w-full max-w-[1000px] m-auto">
+    <section id="features" class="w-full flex flex-col justify-center  bg-[#111111] py-16 sm:py-32">
+      <div class="w-full max-w-[1000px] m-auto px-5">
         <div class="">
           <h2 class="font-gothic text-[48px] uppercase mb-5 text-white">About Us</h2>
         </div>
@@ -26,13 +26,13 @@
             transformative journey, where every move is strategic, and every success is amplified.
           </p>
         </div>
-        <div class="w-full mt-10 flex items-center justify-center">
-          <img class="rounded-full grayscale w-[300px]" width="" height="" src="/img/jeff.webp" alt="Jeff McCann">
-          <div class="w-[300px] pl-5">
+        <div class="w-full mt-10 block sm:flex items-center justify-center">
+          <img class="m-auto sm:m-0 w-full max-w-[250px] md:max-w-[300px] rounded-full grayscale" width="" height="" src="/img/jeff.webp" alt="Jeff McCann">
+          <div class="w-full sm:w-[300px] pl-0 sm:pl-5 mt-5 sm:mt-0">
             <div class="rotate-6">
-              <img class="" width="" height="" src="/img/signature.webp" alt="Jeff's signature">
+              <img class="max-w-[200px] sm:max-w-full m-auto" width="" height="" src="/img/signature.webp" alt="Jeff's signature">
             </div>
-            <p class="text-white font-figtree uppercase tracking-[2px] -mt-5">Jeff McCann</p>
+            <p class="text-center sm:text-left text-white font-figtree uppercase tracking-[2px] -mt-5">Jeff McCann</p>
           </div>
         </div>
         </div>
