--- a/src/_includes/section.header.njk
+++ b/src/_includes/section.header.njk
@@ -1,12 +1,12 @@
-<div class="w-full h-[270px] px-5 relative">
-  <div class="flex items-center justify-between max-w-[1000px] m-auto h-full">
-    <div class="w-1/2">
-      <h1 class="text-2xl text-body font-normal font-gothic text-[200px] m-0 leading-none z-10 relative">
+<div class="w-full h-auto py-8  sm:py-0 sm:h-[270px] px-5 relative">
+  <div class="flex flex-wrap items-center justify-between max-w-[1000px] m-auto h-auto sm:h-full">
+    <div class="w-full sm:w-1/2">
+      <h1 class="text-[120px] md:text-[150px] lg:text-[200px] text-body font-normal font-gothic m-0 leading-none z-10 relative">
         ADVERGE
       </h1>
     </div>
-    <div class="w-1/2">
-      <p class="text-xl font-figtree pl-12">Digital ad sales experts empowering global ad tech firm's to expand into the Canadian market - unlocking growth
+    <div class="w-full sm:w-1/2">
+      <p class="font-figtree pl-0 sm:pl-12 text-base md:text-lg lg:text-xl">Digital ad sales experts empowering global ad tech firm's to expand into the Canadian market - unlocking growth
         opportunities</p>
     </div>
   </div>
@@ -16,7 +16,7 @@
   <div class="absolute top-[-150px] rotate-[130deg] z-0 right-[-100px] opacity-30">
     {% include 'ellipse-2.njk' %}
   </div>
-  <div class="absolute top-[-150px] rotate-[130deg] z-0 opacity-60">
+  <div class="hidden md:block absolute top-[-150px] rotate-[130deg] z-0 opacity-60">
     {% include 'ellipse-3.njk' %}
   </div>
 </div>
