--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,6 +1,6 @@
-<footer class="bg-body w-full px-5  pb-40 pt-20 relative">
+<footer class="bg-body w-full px-5 pb-20 md:pb-40 pt-20 relative">
   <div class="max-w-[1400px] m-auto relative z-10">
-    <h2 class="text-white text-[350px] font-gothic uppercase leading-none text-center">Contact Us</h2>
+    <h2 class="text-left sm:text-center text-white text-[100px] sm:text-[150px] md:text-[200px] lg:text-[300px] xl:text-[350px] font-gothic uppercase leading-none">Contact Us</h2>
     <form class="contact-form mt-5 m-auto max-w-[500px]" name="contact" method="POST" data-netlify="true">
       <p class="text-white font-figtree text-xl mb-8">Let&rsquo;s discuss your success in the Canadian market!</p>
       <div class="mb-5">
