--- a/src/_includes/js.njk
+++ b/src/_includes/js.njk
@@ -1,41 +1,21 @@
-
 <script>
-  {# const handleSubmit = (event) => {
+  const handleSubmit = (event) => {
     event.preventDefault();
     const myForm = event.target;
     const formData = new FormData(myForm);
+    const contactForm = document.querySelector('.contact-form');
+    const successMsg = document.querySelector('.success-msg');
     fetch("/", {
       method: "POST",
       headers: {
         "Content-Type": "application/x-www-form-urlencoded"
       },
       body: new URLSearchParams(formData).toString()
-    }).then(() => alert("Thank you for your submission")).catch((error) => alert(error));
-  };
-  document.querySelector("form").addEventListener("submit", handleSubmit); #}
-
-  const handleSubmit = (event) => {
-  event.preventDefault();
-
-  const myForm = event.target;
-  const formData = new FormData(myForm);
-  const contactForm = document.querySelector('.contact-form');
-  const successMsg = document.querySelector('.success-msg');
-  
-  fetch("/", {
-    method: "POST",
-    headers: { "Content-Type": "application/x-www-form-urlencoded" },
-    body: new URLSearchParams(formData).toString(),
-  })
-    .then(() => {
+    }).then(() => {
       console.log('fomr submitted successfully');
       contactForm.classList.add('hidden');
       successMsg.classList.remove('hidden');
-    })
-    .catch((error) => alert(error));
-};
-
-document
-  .querySelector("form")
-  .addEventListener("submit", handleSubmit);
+    }).catch((error) => alert(error));
+  };
+  document.querySelector("form").addEventListener("submit", handleSubmit);
 </script>
