--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,6 +1,8 @@
 <footer class="bg-body w-full px-5 pb-20 md:pb-40 pt-20 relative overflow-hidden">
   <div class="max-w-[1400px] m-auto relative z-10">
-    <h2 class="text-left sm:text-center text-white text-[100px] sm:text-[150px] md:text-[200px] lg:text-[300px] xl:text-[350px] font-gothic uppercase leading-none">Contact Us</h2>
+    <h2 class="text-left sm:text-center text-white text-[100px] sm:text-[150px] md:text-[200px] lg:text-[300px] xl:text-[350px]
+      font-gothic uppercase leading-none">
+    Contact Us</h2>
     <form class="contact-form mt-5 m-auto max-w-[500px]" name="contact" method="POST" data-netlify="true">
       <p class="text-white font-figtree text-xl mb-8">Let&rsquo;s discuss your success in the Canadian market!</p>
       <div class="mb-5">
@@ -51,3 +53,6 @@
         {% include "ellipse-light-1.njk" %}
       </div>
     </footer>
+    <div class="bg-black py-8 text-center">
+      <p class="text-white opacity-60 text-sm font-figtree">&copy;AdVerge 2024 All Rights Reserved</p>
+    </div>
