--- a/src/index.njk
+++ b/src/index.njk
@@ -2,7 +2,7 @@
 layout: base.njk
 isFront: true
 ---
-<header class="header w-full">
+<header class="header w-full overflow-hidden">
   {% include "section.header.njk" %}
 </header>
 <main>
